@@ -1,6 +1,6 @@
 # JavaSharedMemory [![](https://www.jitpack.io/v/ShirasawaSama/JavaSharedMemory.svg)](https://www.jitpack.io/#ShirasawaSama/JavaSharedMemory)
 
-Shared memory between processes. (Java, C++, Rust, etc)
+Shared memory between processes. (Java, C++, Rust, etc) Based on Java 19 [Foreign Function & Memory API](https://openjdk.org/jeps/434)
 
 > **Warning**
 > Currently only Windows is supported. Support for other platforms will be added later.
@@ -17,6 +17,15 @@ repositories {
 dependencies {
     implementation 'com.github.ShirasawaSama:JavaSharedMemory:<version>'
 }
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+// kotlin script
+// tasks.withType<JavaCompile> {
+//     options.compilerArgs = options.compilerArgs + listOf("--enable-preview")
+// }
 ```
 
 ```java
